--- a/index.html
+++ b/index.html
@@ -11,25 +11,10 @@
     <div class="wrap-all">
         <p class="play-time">0</p>
         <ul class="image-container">
-            <li class="list0"></li>
-            <li class="list1"></li>
-            <li class="list2"></li>
-            <li class="list3"></li>
-            <li class="list4"></li>
-            <li class="list5"></li>
-            <li class="list6"></li>
-            <li class="list7"></li>
-            <li class="list8"></li>
-            <li class="list9"></li>
-            <li class="list10"></li>
-            <li class="list11"></li>
-            <li class="list12"></li>
-            <li class="list13"></li>
-            <li class="list14"></li>
-            <li class="list15"></li>
         </ul>
         <button class="start-button">start</button>
         <p class="game-text">complete!</p>
     </div>
+    <script src="./main.js"></script>
 </body>
 </html>
